[#22] Fix changes after merge
