# v2/api/archive-query-service/v2/query_services.pb.gw.go
@@ -21,6 +21,7 @@ import (
 	"google.golang.org/grpc/metadata"
 	"google.golang.org/grpc/status"
 	"google.golang.org/protobuf/proto"
+	"google.golang.org/protobuf/types/known/emptypb"
 )
 
 // Suppress "imported and not used" errors
@@ -135,6 +136,42 @@ func local_request_ArchiveQueryService_GetTickData_0(ctx context.Context, marsha
 
 }
 
+func request_ArchiveQueryService_GetLastProcessedTick_0(ctx context.Context, marshaler runtime.Marshaler, client ArchiveQueryServiceClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq emptypb.Empty
+	var metadata runtime.ServerMetadata
+
+	msg, err := client.GetLastProcessedTick(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	return msg, metadata, err
+
+}
+
+func local_request_ArchiveQueryService_GetLastProcessedTick_0(ctx context.Context, marshaler runtime.Marshaler, server ArchiveQueryServiceServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq emptypb.Empty
+	var metadata runtime.ServerMetadata
+
+	msg, err := server.GetLastProcessedTick(ctx, &protoReq)
+	return msg, metadata, err
+
+}
+
+func request_ArchiveQueryService_GetProcessedTickIntervals_0(ctx context.Context, marshaler runtime.Marshaler, client ArchiveQueryServiceClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq emptypb.Empty
+	var metadata runtime.ServerMetadata
+
+	msg, err := client.GetProcessedTickIntervals(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	return msg, metadata, err
+
+}
+
+func local_request_ArchiveQueryService_GetProcessedTickIntervals_0(ctx context.Context, marshaler runtime.Marshaler, server ArchiveQueryServiceServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq emptypb.Empty
+	var metadata runtime.ServerMetadata
+
+	msg, err := server.GetProcessedTickIntervals(ctx, &protoReq)
+	return msg, metadata, err
+
+}
+
 // RegisterArchiveQueryServiceHandlerServer registers the http handlers for service ArchiveQueryService to "mux".
 // UnaryRPC     :call ArchiveQueryServiceServer directly.
 // StreamingRPC :currently unsupported pending https://github.com/grpc/grpc-go/issues/906.
@@ -238,6 +275,56 @@ func RegisterArchiveQueryServiceHandlerServer(ctx context.Context, mux *runtime.
 		}
 
 		forward_ArchiveQueryService_GetTickData_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
+	mux.Handle("GET", pattern_ArchiveQueryService_GetLastProcessedTick_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		var stream runtime.ServerTransportStream
+		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		var err error
+		var annotatedContext context.Context
+		annotatedContext, err = runtime.AnnotateIncomingContext(ctx, mux, req, "/qubic.v2.archive.pb.ArchiveQueryService/GetLastProcessedTick", runtime.WithHTTPPathPattern("/getLastProcessedTick"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := local_request_ArchiveQueryService_GetLastProcessedTick_0(annotatedContext, inboundMarshaler, server, req, pathParams)
+		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_ArchiveQueryService_GetLastProcessedTick_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
+	mux.Handle("GET", pattern_ArchiveQueryService_GetProcessedTickIntervals_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		var stream runtime.ServerTransportStream
+		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		var err error
+		var annotatedContext context.Context
+		annotatedContext, err = runtime.AnnotateIncomingContext(ctx, mux, req, "/qubic.v2.archive.pb.ArchiveQueryService/GetProcessedTickIntervals", runtime.WithHTTPPathPattern("/getProcessedTicksIntervals"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := local_request_ArchiveQueryService_GetProcessedTickIntervals_0(annotatedContext, inboundMarshaler, server, req, pathParams)
+		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_ArchiveQueryService_GetProcessedTickIntervals_0(annotatedContext, mux, outboundMarshaler, w, req, response_ArchiveQueryService_GetProcessedTickIntervals_0{resp}, mux.GetForwardResponseOptions()...)
 
 	})
 
@@ -370,6 +457,50 @@ func RegisterArchiveQueryServiceHandlerClient(ctx context.Context, mux *runtime.
 
 	})
 
+	mux.Handle("GET", pattern_ArchiveQueryService_GetLastProcessedTick_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		var err error
+		var annotatedContext context.Context
+		annotatedContext, err = runtime.AnnotateContext(ctx, mux, req, "/qubic.v2.archive.pb.ArchiveQueryService/GetLastProcessedTick", runtime.WithHTTPPathPattern("/getLastProcessedTick"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := request_ArchiveQueryService_GetLastProcessedTick_0(annotatedContext, inboundMarshaler, client, req, pathParams)
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_ArchiveQueryService_GetLastProcessedTick_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
+	mux.Handle("GET", pattern_ArchiveQueryService_GetProcessedTickIntervals_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		var err error
+		var annotatedContext context.Context
+		annotatedContext, err = runtime.AnnotateContext(ctx, mux, req, "/qubic.v2.archive.pb.ArchiveQueryService/GetProcessedTickIntervals", runtime.WithHTTPPathPattern("/getProcessedTicksIntervals"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := request_ArchiveQueryService_GetProcessedTickIntervals_0(annotatedContext, inboundMarshaler, client, req, pathParams)
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_ArchiveQueryService_GetProcessedTickIntervals_0(annotatedContext, mux, outboundMarshaler, w, req, response_ArchiveQueryService_GetProcessedTickIntervals_0{resp}, mux.GetForwardResponseOptions()...)
+
+	})
+
 	return nil
 }
 
@@ -391,6 +522,15 @@ func (m response_ArchiveQueryService_GetTransactionsForTick_0) XXX_ResponseBody(
 	return response.Transactions
 }
 
+type response_ArchiveQueryService_GetProcessedTickIntervals_0 struct {
+	proto.Message
+}
+
+func (m response_ArchiveQueryService_GetProcessedTickIntervals_0) XXX_ResponseBody() interface{} {
+	response := m.Message.(*GetProcessedTicksIntervalsResponse)
+	return response.ProcessedTicksIntervals
+}
+
 var (
 	pattern_ArchiveQueryService_GetTransactionByHash_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0}, []string{"getTransactionByHash"}, ""))
 
@@ -399,6 +539,10 @@ var (
 	pattern_ArchiveQueryService_GetTransactionsForIdentity_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0}, []string{"getTransactionsForIdentity"}, ""))
 
 	pattern_ArchiveQueryService_GetTickData_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0}, []string{"getTickData"}, ""))
+
+	pattern_ArchiveQueryService_GetLastProcessedTick_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0}, []string{"getLastProcessedTick"}, ""))
+
+	pattern_ArchiveQueryService_GetProcessedTickIntervals_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0}, []string{"getProcessedTicksIntervals"}, ""))
 )
 
 var (
@@ -409,4 +553,8 @@ var (
 	forward_ArchiveQueryService_GetTransactionsForIdentity_0 = runtime.ForwardResponseMessage
 
 	forward_ArchiveQueryService_GetTickData_0 = runtime.ForwardResponseMessage
+
+	forward_ArchiveQueryService_GetLastProcessedTick_0 = runtime.ForwardResponseMessage
+
+	forward_ArchiveQueryService_GetProcessedTickIntervals_0 = runtime.ForwardResponseMessage
 )
