# v2/api/archive-query-service/v2/query_services.swagger.json
@@ -16,6 +16,54 @@
     "application/json"
   ],
   "paths": {
+    "/getLastProcessedTick": {
+      "get": {
+        "operationId": "ArchiveQueryService_GetLastProcessedTick",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/pbGetLastProcessedTickResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "tags": [
+          "ArchiveQueryService"
+        ]
+      }
+    },
+    "/getProcessedTicksIntervals": {
+      "get": {
+        "operationId": "ArchiveQueryService_GetProcessedTickIntervals",
+        "responses": {
+          "200": {
+            "description": "",
+            "schema": {
+              "type": "array",
+              "items": {
+                "type": "object",
+                "$ref": "#/definitions/pbProcessedTickInterval"
+              }
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "tags": [
+          "ArchiveQueryService"
+        ]
+      }
+    },
     "/getTickData": {
       "post": {
         "operationId": "ArchiveQueryService_GetTickData",
@@ -150,6 +198,27 @@
     }
   },
   "definitions": {
+    "pbGetLastProcessedTickResponse": {
+      "type": "object",
+      "properties": {
+        "tickNumber": {
+          "type": "integer",
+          "format": "int64"
+        }
+      }
+    },
+    "pbGetProcessedTicksIntervalsResponse": {
+      "type": "object",
+      "properties": {
+        "processedTicksIntervals": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/pbProcessedTickInterval"
+          }
+        }
+      }
+    },
     "pbGetTickDataRequest": {
       "type": "object",
       "properties": {
@@ -271,6 +340,23 @@
           "format": "int64"
         },
         "size": {
+          "type": "integer",
+          "format": "int64"
+        }
+      }
+    },
+    "pbProcessedTickInterval": {
+      "type": "object",
+      "properties": {
+        "epoch": {
+          "type": "integer",
+          "format": "int64"
+        },
+        "firstTick": {
+          "type": "integer",
+          "format": "int64"
+        },
+        "lastTick": {
           "type": "integer",
           "format": "int64"
         }
